# juno

./: .dockerignore  .gitignore  .gitmodules  .golangci.yaml  .golangci_diff.yaml  .goreleaser.yaml  404.html  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  LICENSE  Makefile  README.md  Resource Exhaustion: High CPU usage when parsing massive JSON-RPC payloads  SECURITY.md  benchmark-data.json  benchmark_script.py  benchmarks.html  buf.gen.yaml  buf.yaml  codecov.yml  cpu.prof  docker-compose.consensus.yaml  docker-compose.monitoring.yaml  docker-compose.yml  gh-pages  gh-pages.pub  go.mod  go.sum  goreleaser.Dockerfile  hehe.txt  index.html  juno_rpc_api.json  main.tf  package-lock.json  package.json  (+9 more)
.github/: CODEOWNERS  codecov.yml  dependabot.yml  pull_request_template.md
0.11.0/: index.html  search-index.json
0.11.8/: index.html  search-index.json
0.12.4/: index.html  search-index.json
0.13.0/: index.html  search-index.json
0.14.0/: index.html  search-index.json
0.15.0/: index.html  search-index.json
0.6.0/: index.html
0.6.1/: index.html
0.6.2/: index.html
0.6.3/: index.html  search-index.json
0.7.0/: index.html  search-index.json
0.8.0/: index.html  search-index.json
0.9.1/: index.html
0.9.2/: index.html
0.9.3/: index.html  search-index.json
blockbuilder/: build_genesis_state.go  genesisState.go  genesisState_test.go  genesis_state.go
blockchain/: accessors.go  aggregate_bloom_cache_test.go  aggregated_bloom_filter_cache.go  aggregated_bloom_filter_cache_test.go  aggregated_event_filter.go  block_storage.go  block_storage_test.go  blockchain.go  blockchain2.go  blockchain_test.go  encoder_initializer.go  event_filter.go  event_listener.go  event_matcher.go  event_matcher_test.go  init_test.go  metrics.go  pending.go  pending_test.go  snap_server.go  snap_server_interface.go  state.go  state_version.go  state_version_test.go  test_blockchain.go  testchain.go  transaction_storage.go  transaction_storage_test.go
blockifier/: README.md  go.mod  go.sum
broadcast/: broadcast.go  broadcast_benchmark_test.go  broadcast_chan.go  broadcast_test.go  errors.go  event_or_lag.go  ring_buffer.go
builder/: builder.go  builder_test.go  event_listener.go  executor.go  genesis_state.go  init_test.go  result.go  state.go  state_diff.go  state_diff_test.go  state_test.go
cache/: transaction_status.go
cairo/: Makefile  Scarb.toml
cli/: main.go
clients/: block_11817.json  classDefinition_0x05b8ed9ac0c16cfa75e1541813217e791e04daee4647f3f34dc9746b2d341866.json  client.go  feeder.go  feeder_test.go  gateway.go  gateway_test.go  programhash.go  programhash_test.go  transactionReceipt_0x3a4c33f7ae312f1a7cbef030eebb15f3ec42e0a889e622aac83e96b07a7dc25.json
cmd/: main.go  root.go
cmdNEW/: main.go
config/: index.html
configs/: config.go  config_test.go  gateway.go
configuring/: index.html
consensus/: consensus.go  consensus_test.go  export_test.go  mock.go  restart_test.go
consensus-tests/: Dockerfile.shooter  README.md  all.sh  docker-compose.yaml  setup.sh  shoot.sh
core/: Transaction.go  accessors.go  accessors_test.go  aggregated_bloom_filter.go  aggregated_bloom_filter_test.go  block.go  block_pkg_test.go  block_test.go  block_transaction.go  block_transaction_serializer.go  block_transaction_test.go  chain_height.go  class.go  class_hash.go  class_test.go  common_state.go  common_trie.go  contract.go  contract2.go  contract_addresses.go  contract_test.go  deprecated_cairo_program.go  deprecated_cairo_program_test.go  entrypoint.go  history.go  history2.go  history2_pkg_test.go  history_pkg_test.go  history_test.go  init_test.go  keccak.go  keccak_test.go  l1_head.go  metrics.go  network.go  (+50 more)
core/rust/: .gitignore  Cargo.toml  Makefile
core/rust/src/: lib.rs
starknet/compiler/rust/: .gitignore  Cargo.toml  Makefile
starknet/compiler/rust/src/: lib.rs
starknet/rust/: .gitignore  Cargo.toml  Makefile
starknet/rust/src/: lib.rs
vm/rust/: .gitignore  Cargo.toml  Makefile  bench.sh  build.rs  prof.sh  versioned_constants.json  versioned_constants_13_1.json  versioned_constants_13_1_1.json  versioned_constants_13_2.json
vm/rust/bench_json/: analysis.jl  extract.sh
vm/rust/benches/: README.md  blockifier-perf.rs
vm/rust/src/: block_context.rs  call.rs  class.rs  entrypoint.rs  error.rs  error_stack.rs  errors.rs  execution.rs  execution_info.rs  ffi.rs  ffi_entrypoint.rs  ffi_type.rs  jsonrpc.rs  juno_state.rs  juno_state_reader.rs  juno_versioned_constants.rs  lib.rs  lru_cached_reader.rs  recorded_state.rs  serstate.rs  state_reader.rs  transaction.rs  types.rs  versioned_constants.rs
vm/rust/src/entrypoint/: call.rs  constants.rs  execute.rs  utils.rs
vm/rust/src/entrypoint/call/: call.rs  ffi.rs  utils.rs
vm/rust/src/entrypoint/execute/: execute.rs  ffi.rs  process.rs  utils.rs
vm/rust/src/entrypoint/execute/process/: binary_search_execution.rs  execution.rs  process.rs  utils.rs
vm/rust/src/error/: call.rs  execution.rs  juno.rs  stack.rs
vm/rust/src/ffi_type/: class_info.rs  execution_resources.rs  function_invocation.rs  initial_reads.rs  state_diff.rs  transaction_receipt.rs  transaction_trace.rs
vm/rust/src/ffi_types/: function_invocation.rs
vm/rust/src/protobuf/: compiled_class.pb.rs  juno.vm.rs
vm/rust/src/state_reader/: ffi.rs  state_reader.rs
vm/rust/tests/: load_file.rs
(+4196 files in other folders)
