[package]
name = "juno-starknet-core-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.171"
serde_json = { version = "1.0.96", features = ["raw_value"] }
starknet-core = "0.8.0"

[lib]
crate-type = ["staticlib"]