[package]
name = "juno-starknet-compiler-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.171"
serde_json = { version = "1.0.96", features = ["raw_value"] }
# version should be in sync with other cargo-lang-* packages in vm/rust/Cargo.toml
cairo-lang-starknet-classes = "=2.6.0-rc.1"

[lib]
crate-type = ["staticlib"]
