[package]
name = "juno-starknet-compiler-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.208"
serde_json = { version = "1.0.125", features = ["raw_value"] }
cairo-lang-starknet-classes = "2.7.1"

[lib]
crate-type = ["staticlib"]
