[package]
name = "juno-starknet-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.208"
serde_json = { version = "1.0.125", features = ["raw_value"] }
blockifier = { version = "0.16.0-rc.3", features = ["node_api"] }
cairo-lang-casm = "=2.12.3"
cairo-lang-starknet-classes = "=2.12.3"
cairo-lang-runner = { version = "=2.12.3" }
starknet_api = "0.16.0-rc.3"
cairo-vm = "=2.5.0"
starknet-types-core = { version = "0.2.4", features = ["hash", "prime-bigint"] }
indexmap = "2.1.0"
cached = "0.55.1"
once_cell = "1.19.0"
lazy_static = "1.4.0"
semver = "1.0.22"
anyhow = "1.0.81"

[lib]
crate-type = ["staticlib"]
