[package]
name = "juno-starknet-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.208"
serde_json = { version = "1.0.125", features = ["raw_value"] }
blockifier = { git = "https://github.com/starkware-libs/sequencer", rev = "be54aeea510ddfe1190c742e902acbd8103ff941", features = ["node_api", "reexecution"] }
starknet_api = { git = "https://github.com/starkware-libs/sequencer", rev = "be54aeea510ddfe1190c742e902acbd8103ff941" }
cairo-vm = "3.1.0"
cairo-lang-casm = "=2.15.0"
cairo-lang-starknet-classes = "=2.15.0"
cairo-lang-runner = { version = "=2.15.0" }
starknet-types-core = { version = "0.2.4", features = ["hash", "prime-bigint"] }
indexmap = "2.1.0"
cached = "0.55.1"
once_cell = "1.19.0"
lazy_static = "1.4.0"
semver = "1.0.22"
anyhow = "1.0.81"

[lib]
crate-type = ["staticlib"]
