[package]
name = "juno-starknet-compiler-rs"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
cairo-lang-starknet-classes = { workspace = true }

[lib]
crate-type = ["staticlib"]
